fix the alignment problem

--- a/src/components/Classes/styles/_SkillList.scss
+++ b/src/components/Classes/styles/_SkillList.scss
@@ -70,7 +70,7 @@
     opacity: 0;
 
     .skill-icon {
-        margin-right: 1.5rem;
+        margin-right: 1rem;
         width: 7rem;
         height: 7rem;
         cursor: pointer;
