--- a/src/components/Streams/styles/_StreamList.scss
+++ b/src/components/Streams/styles/_StreamList.scss
@@ -69,13 +69,9 @@
                 }
             }
         }
-    }
 
-    &:after {
-        content: "";
-        padding: 1.5rem;
-        max-width: 50%;
-        width: 35rem;
-        flex: 1;
+        &.hidden {
+            padding: 0;
+        }
     }
 }
